app/src/test/resources/programs/valid/loops/nestedLoopsBreaksProperlyWithLabels.exe
foo main() -> Int = {
    loop {
        loop {
            2
        }
        2
    }
}