app/src/test/resources/programs/invalid/variables/ChangingConstant.exe
foo main() -> Int {
    let kRealConst: Int = 17;
    kRealConst = 18;
}
